# dCNS

./: .gitignore  CMakeLists.txt  InputParser.cpp  InputParser.h  LICENSE  README.md  bitbucket-pipelines.yml  controlLayer.h  controlLayer4.cpp  main.cpp  version.h
docs/: comparesion.html  parameters.Rmd
googletest/: readme
googletest/googletest/: CMakeLists.txt  gtest.cbp
impl/: FastaIndexEntryImpl.cpp  FastaIndexEntryImpl.h  FastaWithIndex.cpp  FastaWithIndex.h  SequenceCharToUInt8.cpp  SmithWaterman_backup2.cpp  SmithWaterman_bas.cpp  SmithWaterman_bas.h  calculateK.cpp  calculateK.h  fasta.cpp  fasta.h  findSimilarFragmentsForPairedSequence.cpp  findSimilarFragmentsForPairedSequence.h  findSimilarFragmentsForPairedSequence3 (copy).cpp  findSimilarFragmentsForPairedSequence3.cpp  findSimilarFragmentsForPairedSequence3.h  findSimilarFragmentsForPairedSequence4.cpp  findSimilarFragmentsForPairedSequence_backupv1.cpp  getAllTheCdsPositions.cpp  getAllTheCdsPositions.h  getCnsForMultipleSpecies.cpp  getCnsForMultipleSpecies.h  getCnsForMultipleSpecies2.cpp  getCnsForMultipleSpecies_goodv1.cpp  getCnsForMultipleSpecies_goodv2.cpp  getCnsForMultipleSpecies_v0.cpp  gffToCategory.cpp  gffToCategory.h  impl.h  longestPath.cpp  longestPath.h  mapCNSToGenome.cpp  mapCNSToGenome.h  maskGenome.cpp  maskGenome.h  permutationLsqLambdaK.cpp  permutationLsqLambdaK.h  samFileToSeeds.cpp  samFileToSeeds.h  (+7 more)
model/: CnsMasResult.cpp  CnsMasResult.h  FastaIndexEntry.cpp  FastaIndexEntry.h  Graph.cpp  Graph.h  MsaGraph.cpp  MsaGraph.h  Node.cpp  Node.h  PairSequenceAlginmentResult.cpp  PairSequenceAlginmentResult.h  model.h  utils.cpp  utils.h
scoreMatrix/: 0  1  10  100  70  85  README  matrixList
scripts/: CnsBasedGwasFixedModelReverseV2.py  CnsBasedGwasFixedModelV2.py  FastaFile.py  GffFile.py  MyUtil.py  NucleotideCodeSubstitution.py  READ.md  SpliceSites  bamTobedOverlap.py  checkUnfinishedJobs.pl  checkUnfinishedJobsV2.pl  combineCnsSamFiles.pl  findExtraConservedCnsV2.pl  longestTranscript.py  maskDifference.pl  maskFastaUsingJellyfishCountDump.pl  maskFastaUsingJellyfishCountDumpV2.pl  multipleSpeciesToPlotFormat.py  plotMSAResult.r  plotPairwiseResult.r  plotSlidingWindow.r  scoreFromMsa.py  scriptToestimateKandLambda.r  submitToXsed.pl  tem
scripts/extractInterGeneticSequence/: extractCnsSequenceFromSamFileForCNN.py  extractCnsSequenceFromSamFileForCNNv2.py  gffToMiniPosition.py  kmer_cluster_CNS.py  mapConservedGeneToDenovoMiniPosition_plot.r  predict_CNS_Emre.py  predict_CNS_Emre_seperate_17.py  predict_CNS_hai.py  sequenceUpStreamGeneAndDownStream.py  sequenceUpStreamGeneAndDownStreamV2.py  sequenceUpStreamGeneAndDownStreamV3.py  utils.py
test/impl/: SequenceCharToUInt8.cpp  caculateK.cpp  control.cpp  findSimilarFragmentsForPairedSequence.cpp  findSimilarFragmentsForPairedSequenceControlLayer4.cpp  getCnsForMultipleSpecies.cpp  permutationLsqLambdaK.cpp  readFasta.cpp  samFileToSeeds.cpp  slidingWindowAlignment.cpp  smithWaterman.cpp  testExtend.cpp  testKmerReading.cpp
test/stag-CNS/: SORBI_3001G063600_SORBI_3001G063800  haha_CNS_8.csv  haha_CNS_9.csv  haha_LPMEM_11.csv  haha_LPMEM_9.csv  haha_MEM_1_11.csv  haha_MEM_1_7.csv  haha_MEM_1_9.csv  haha_MEM_2_7.csv  haha_MEM_2_9.csv  haha_mems_7.txt  haha_mems_9.txt  stagCNS  stagCNS.cpp
